--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-	<h1 class="application_title">Race to your Daughter</h1>
+	<h1 class="application_title">Race For My Daughter</h1>
 	
 <%= yield %>
 
